--- a/index.html
+++ b/index.html
@@ -7,5 +7,27 @@
     <link href="styles.css" rel="stylesheet" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <section>
+          <ul>
+            <li>MM</li>
+            <li>THAT´S ME.</li>
+            <li>MY MOTIVATION.</li>
+            <li>GET IN TOUCH.</li>
+          </ul>
+        </section>
+      </nav>
+
+      <section>
+        <img src="#" alt="Profilbild" />
+      </section>
+      <section>
+        <h1>Moin</h1>
+        <h2>Ich bins der Max</h2>
+        <p>Web-Entwickler</p>
+      </section>
+    </header>
+  </body>
 </html>
