--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       </nav>
 
       <section>
-        <img src="#" alt="Profilbild" />
+        <img
+          src="/Users/maxmu/dev/portfolio/ images/user-head-side-hand-drawn-outline.svg"
+          alt="Profilbild"
+        />
       </section>
       <section>
         <h1>Moin</h1>
