--- a/index.html
+++ b/index.html
@@ -8,29 +8,48 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="navbar">
         <section>
           <ul>
-            <li>MM</li>
-            <li>THAT´S ME.</li>
-            <li>MY MOTIVATION.</li>
-            <li>GET IN TOUCH.</li>
+            <li>
+              <a href="#">MM</a>
+            </li>
+            <li>
+              <a href="#">THAT´S ME.</a>
+            </li>
+            <li>
+              <a href="#">MY MOTIVATION.</a>
+            </li>
+            <li>
+              <a href="#footer">GET IN TOUCH.</a>
+            </li>
           </ul>
         </section>
       </nav>
-
-      <section>
-        <img
-          src="/Users/maxmu/dev/portfolio/ images/user-head-side-hand-drawn-outline.svg"
-          alt="Profilbild"
-        />
-      </section>
-      <section>
-        <h1>Moin</h1>
-        <h2>Ich bins der Max</h2>
-        <p>Web-Entwickler</p>
+      <section class="profile">
+        <section>
+          <img src="images/profile-image.png" alt=" " />
+        </section>
+        <section class="profile-info">
+          <h1>Moin</h1>
+          <h2>Ich bins der Max</h2>
+          <p>Web-Entwickler</p>
+        </section>
       </section>
     </header>
+    <main class="main">
+      <h1>main</h1>
+      <img src="images/berlin.png" alt="" />
+    </main>
+    <footer class="footer">
+      <section>
+        <ul>
+          <li>
+            <a href="#">MM</a>
+          </li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
